Fix align-items examples

--- a/style.css
+++ b/style.css
@@ -523,7 +523,7 @@ h4 {
 .content-space-evenly {justify-content: space-evenly;}
 
 .align-grid {
-  display: grid;
+  display: inline-grid;
   grid-template-rows: repeat(3, 200px);
   background: white;
   width: 200px;
